--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
     <h1 id="title">Rock - Paper - Scissors</h1>
     <div class="choices">
         <div class="choice" id="rock">
-            <img src="./images/rock.png" alt="rock">
+            <img src="./rock.png" alt="rock">
         </div>
         <div class="choice" id="paper">
-            <img src="./images/paper.png" alt="paper">
+            <img src="./paper.png" alt="paper">
         </div>
         <div class="choice" id="scissor">
-            <img src="./images/scissor.png" alt="scissor">
+            <img src="./scissor.png" alt="scissor">
         </div>
     </div>
     <div class="score-board">
