--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Rock Paper Scissors - Game By Saransh </title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins&family=Shizuru&display=swap" rel="stylesheet">
-    <link rel="shortcut icon" href="./images/favicon.jpg" type="image/x-icon">
+    <link rel="shortcut icon" href="./favicon.jpg" type="image/x-icon">
 </head>
 <body>
     <h1 id="title">Rock - Paper - Scissors</h1>
